--- a/Resources/translations/PicossSonataExtraAdminBundle.en.xliff
+++ b/Resources/translations/PicossSonataExtraAdminBundle.en.xliff
@@ -18,17 +18,14 @@
                 <source>action_move_bottom</source>
                 <target>Bottom</target>
             </trans-unit>
-
             <trans-unit id="flash_position_updated_successfully">
                 <source>flash_position_updated_successfully</source>
                 <target>Postion updated successfully</target>
             </trans-unit>
-
             <trans-unit id="label_revert_revision">
                 <source>label_revert_revision</source>
                 <target>Revert</target>
             </trans-unit>
-
             <trans-unit id="title_history_revert">
                 <source>title_history_revert</source>
                 <target>Confirm revert</target>
@@ -45,21 +42,18 @@
                 <source>history_revert_or</source>
                 <target>or</target>
             </trans-unit>
-
             <trans-unit id="link_action_history_list">
                 <source>link_action_history_list</source>
                 <target>Back to history</target>
             </trans-unit>
-
-            <trans-unit id="flash_history_revert_successfull">
-                <source>flash_history_revert_successfull</source>
+            <trans-unit id="flash_history_revert_successful">
+                <source>flash_history_revert_successful</source>
                 <target>Item has been reverted successfully.</target>
             </trans-unit>
             <trans-unit id="flash_history_revert_error">
                 <source>flash_history_revert_error</source>
                 <target>An Error has occurred during item revert.</target>
             </trans-unit>
-
             <trans-unit id="link_action_trash">
                 <source>link_action_trash</source>
                 <target>Trash</target>
@@ -74,23 +68,87 @@
             </trans-unit>
             <trans-unit id="message_restore_confirmation">
                 <source>message_restore_confirmation</source>
-                <target>Are you sure you want to restore the selected element?</target>
+                <target>Are you sure you want to restore the selected element "%object%"?</target>
             </trans-unit>
             <trans-unit id="btn_restore">
                 <source>btn_restore</source>
                 <target>Yes, restore</target>
             </trans-unit>
+            <trans-unit id="action_untrash">
+                <source>action_untrash</source>
+                <target>Restore</target>
+            </trans-unit>
             <trans-unit id="restore_or">
                 <source>restore_or</source>
                 <target>or</target>
             </trans-unit>
-            <trans-unit id="flash_untrash_successfull">
-                <source>flash_untrash_successfull</source>
+            <trans-unit id="flash_untrash_successful">
+                <source>flash_untrash_successful</source>
                 <target>Item has been restored successfully.</target>
             </trans-unit>
             <trans-unit id="flash_untrash_error">
                 <source>flash_untrash_error</source>
                 <target>An Error has occurred during item restoration.</target>
+            </trans-unit>
+            <trans-unit id="flash_hard_delete_successful">
+                <source>flash_hard_delete_successful</source>
+                <target>Item has been permanently deleted</target>
+            </trans-unit>
+            <trans-unit id="flash_hard_delete_error">
+                <source>flash_hard_delete_error</source>
+                <target>An Error has occurred during item deletion.</target>
+            </trans-unit>
+            <trans-unit id="title_hard_delete">
+                <source>title_hard_delete</source>
+                <target>Confirm permanent deletion</target>
+            </trans-unit>
+            <trans-unit id="btn_hard_delete">
+                <source>btn_hard_delete</source>
+                <target>Yes, delete permanently</target>
+            </trans-unit>
+            <trans-unit id="delete_or">
+                <source>delete_or</source>
+                <target>or</target>
+            </trans-unit>
+            <trans-unit id="action_hard_delete">
+                <source>action_hard_delete</source>
+                <target>Permanent deletion</target>
+            </trans-unit>
+            <trans-unit id="message_hard_delete_confirmation">
+                <source>message_hard_delete_confirmation</source>
+                <target>Are you sure you want to permanently delete the selected element "%object%"?</target>
+            </trans-unit>
+            <trans-unit id="link_action_hard_delete_all">
+                <source>link_action_hard_delete_all</source>
+                <target>Delete permanently all items</target>
+            </trans-unit>
+            <trans-unit id="flash_hard_delete_all_successful">
+                <source>flash_hard_delete_all_successful</source>
+                <target>Item has been permanently deleted</target>
+            </trans-unit>
+            <trans-unit id="flash_hard_delete_all_error">
+                <source>flash_hard_delete_error</source>
+                <target>An Error has occurred during items deletion.</target>
+            </trans-unit>
+            <trans-unit id="flash_hard_delete_all_no_item">
+                <source>flash_hard_delete_all_no_item</source>
+                <target>No item to delete.</target>
+            </trans-unit>
+            <trans-unit id="title_hard_delete_all">
+                <source>title_hard_delete_all</source>
+                <target>Confirm permanent deletion of all items</target>
+            </trans-unit>
+            <trans-unit id="btn_hard_delete_all">
+                <source>btn_hard_delete_all</source>
+                <target>Yes, delete permanently</target>
+            </trans-unit>
+            <trans-unit id="action_hard_delete_all">
+                <source>action_hard_delete_all</source>
+                <target>Permanent deletion of all items</target>
+            </trans-unit>
+            <trans-unit id="message_hard_delete_all_confirmation">
+                <source>message_hard_delete_all_confirmation</source>
+                <target>Are you sure you want to permanently delete %count% item(s)?</target>
             </trans-unit>
         </body>
     </file>
